--- a/index.HTML
+++ b/index.HTML
@@ -7,8 +7,8 @@
     
     <meta property="og:title" content="Nuestra Boda - Enrique y Alejandra">
     <meta property="og:description" content="Tenemos el honor de invitarte a celebrar nuestro amor. ¡Acompáñanos en este día tan especial!">
-    <meta property="og:image" content="https://libiayernesto.netlify.app/miniatura.jpg">
-    <meta property="og:url" content="https://libiayernesto.netlify.app/">
+    <meta property="og:image" content="https://enriqueyalejandra.netlify.app/miniatura.jpg">
+    <meta property="og:url" content="https://enriqueyalejandra.netlify.app/">
     <meta property="og:type" content="website">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
