--- a/index.HTML
+++ b/index.HTML
@@ -31,6 +31,11 @@
             margin-bottom: 4px;
             line-height: 1.4;
         }
+        /* ===== ARREGLO PARA VISIBILIDAD DE GALERÍA EN MÓVIL ===== */
+#galeria .contenido-interno {
+    position: relative;
+    z-index: 5; /* Un valor alto para asegurar que esté al frente */
+}
         /* ===== CÓDIGO FINAL PARA CENTRAR EL ITINERARIO ===== */
         .item-itinerario {
             display: flex;
