ajuste version movil

--- a/index.HTML
+++ b/index.HTML
@@ -31,10 +31,10 @@
             margin-bottom: 4px;
             line-height: 1.4;
         }
-        /* ===== ARREGLO PARA VISIBILIDAD DE GALERÍA EN MÓVIL ===== */
+        /* ===== SOLUCIÓN DEFINITIVA PARA GALERÍA MÓVIL ===== */
 #galeria .contenido-interno {
     position: relative;
-    z-index: 5; /* Un valor alto para asegurar que esté al frente */
+    z-index: 2;
 }
         /* ===== CÓDIGO FINAL PARA CENTRAR EL ITINERARIO ===== */
         .item-itinerario {
