--- a/index.HTML
+++ b/index.HTML
@@ -233,7 +233,7 @@ efectivo en sobres que habrá en la fiesta o mesa de regalos Liverpool código 5
         </article>
 
         <section id="galeria">
-            <div class="contenido-interno fade-in-on-scroll">
+            <div class="contenido-interno">
                 <h2 style="font-size: 3.5rem; font-family: var(--fuente-elegante); font-style: italic;">Nuestros Momentos</h2>
                 <div class="galeria-grid">
                     <img src="galeria1.jpg" alt="galeria1.jpg"><img src="galeria2.jpg" alt="galeria2.jpg">
