--- a/index.HTML
+++ b/index.HTML
@@ -155,7 +155,7 @@
     </div>
 
     <div id="seccion-logo">
-        <img src="logo.png" alt="Logo de la Boda">
+        <img src="logo.jpg" alt="Logo de la Boda">
     </div>
     <main id="invitacion-principal" style="visibility: hidden; opacity: 0; transition: opacity 1.5s ease-in-out;">
 
