--- a/index.HTML
+++ b/index.HTML
@@ -332,7 +332,7 @@ document.addEventListener('DOMContentLoaded', () => {
         fechaBoda: new Date(2025, 10, 22, 17, 0, 0),
         tituloCalendario: "Boda Enrique & Alejandra",
         ubicacionCeremonia: "Lugar de la Ceremonia",
-        urlGoogleSheet: "URL_DE_TU_GOOGLE_SHEET" // Asegúrate de poner tu URL de Google Sheet aquí
+        urlGoogleSheet: "https://script.google.com/macros/s/AKfycbwGrEWmztpQH9GTR-T_IRvwab5ElU7wcmoIPqqF44usGen23ZGSUL78iqz0yoyWI3A/exec" // Asegúrate de poner tu URL de Google Sheet aquí
     };
 
     // --- ELEMENTOS DEL DOM (COMPLETOS Y CORREGIDOS) ---
