--- a/index.HTML
+++ b/index.HTML
@@ -231,7 +231,7 @@ De familia y amigos para celebrar el amor que nos une.</p>
                     <p>Quienes serán testigos de nuestro amor y nos guiarán en nuestro camino.</p>
                     <p><strong>Velación:</strong><br>-Iris Rodríguez Cienfuegos<br>-Otoniel Herrera Santillán</p>
                     <p><strong>Anillos:</strong><br>-Reyna Cienfuegos Polanco<br>-Tiburcio Robles Alvarado</p>
-                    <p><strong>Arras:</strong><br>-Rosalinda García Montoya<br>-Pablo Sisneros García</p>
+                    <p><strong>Arras:</strong><br>-Rosalinda García Montoya<br>-Pablo Sisneros Avonce</p>
                     <p><strong>Lazo:</strong><br>-Dora Francisca Sisneros García<br>David Francisco Ruiz Corona</p>
                     <p><strong>Biblia y Rosario:</strong><br>-Idalia García Estrada<br>-Cruz Cervantes Arreola</p>
                     <p><strong>Ramo:</strong><br>-Maricruz Arreola Cienfuegos</p>
